--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
 
       - name: Create .env file for cadv_api
         run: |
-          echo "DBSTRING=postgres://cadvadmin:${{ secrets.DB_PASSWORD }}@${{ secrets.HOST }}:5432/cadvdb?sslmode=disable"
+          mkdir -p secret
+          echo "DBSTRING=postgres://cadvadmin:${{ secrets.DB_PASSWORD }}@${{ secrets.HOST }}:5432/cadvdb?sslmode=disable" >> secret/.env
           
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
